[project]
name = "tda_deep_learning_research_pipeline"
version = "0.1.0"
description = "tda_deep_learning_research_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
tda_deep_learning_research_pipeline = "tda_deep_learning_research_pipeline.main:run"
run_crew = "tda_deep_learning_research_pipeline.main:run"
train = "tda_deep_learning_research_pipeline.main:train"
replay = "tda_deep_learning_research_pipeline.main:replay"
test = "tda_deep_learning_research_pipeline.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
